Fix Img Text alignment and edit bar icon size

--- a/src/css/normalize.css
+++ b/src/css/normalize.css
@@ -2197,18 +2197,12 @@ a.bibcite {
 	padding: inherit;
 }
 
-.image-container.aligncenter {
-	text-align: inherit;
-}
-
 .image-container.alignright {
 	padding-right: inherit;
-	text-align: inherit;
 }
 
 .image-container.alignleft {
 	padding-left: inherit;
-	text-align: inherit;
 }
 
 .image-container.floatright {
